stocktrader-all-in-one.yaml
#       Copyright 2017 IBM Corp All Rights Reserved

#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at

#       http://www.apache.org/licenses/LICENSE-2.0

#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

#Deploy the pod
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: loyalty-level
spec:F
  replicas: 1
  template:
    metadata:
      labels:
        app: loyalty-level
    spec:
      containers:
      - name: loyalty-level
        image: @registryHostAndRepo@/loyalty-level:latest
        ports:
          - containerPort: 9080
        imagePullPolicy: IfNotPresent
---
#Deploy the service
apiVersion: v1
kind: Service
metadata:
  name: loyalty-level-service
  labels:
    app: loyalty-level
spec:
  type: NodePort
  ports:
    - port: 9080
  selector:
    app: loyalty-level
---
#Configure the ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
# annotations:
#   ingress.kubernetes.io/rewrite-target: /loyalty-level
  name: loyalty-level-ingress
spec:
  rules:
  - http:
      paths:
      - path: /loyalty-level
        backend:
          serviceName: loyalty-level-service
          servicePort: 9080
---
#
#Deploy the pod
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: notification
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
      - name: notification
        image: @registryHostAndRepo@/notification:latest
        ports:
          - containerPort: 9080
        imagePullPolicy: Always
---
#
#Deploy the pod
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: portfolio
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio
        image: @registryHostAndRepo@/portfolio:latest
        ports:
          - containerPort: 9080
        imagePullPolicy: Always

---
#
#Deploy the service
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  labels:
    app: portfolio
spec:
  type: NodePort
  ports:
    - port: 9080
  selector:
    app: portfolio
---
#Configure the ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
# annotations:
#   ingress.kubernetes.io/rewrite-target: /portfolio
  name: portfolio-ingress
spec:
  rules:
  - http:
      paths:
      - path: /portfolio
        backend:
          serviceName: portfolio-service
          servicePort: 9080

#
#Deploy the pod
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: stock-quote
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: stock-quote
    spec:
      containers:
      - name: stock-quote
        image: @registryHostAndRepo@/stock-quote:latest
        ports:
          - containerPort: 9080
        imagePullPolicy: Always
---
#Deploy the service
apiVersion: v1
kind: Service
metadata:
  name: stock-quote-service
  labels:
    app: stock-quote
spec:
  type: NodePort
  ports:
    - port: 9080
  selector:
    app: stock-quote
---
#Configure the ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
# annotations:
#   ingress.kubernetes.io/rewrite-target: /stock-quote
  name: stock-quote-ingress
spec:
  rules:
  - http:
      paths:
      - path: /stock-quote
        backend:
          serviceName: stock-quote-service
          servicePort: 9080
#Deploy the pod
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: trader
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: trader
    spec:
      containers:
      - name: trader
        image: @registryHostAndRepo@/trader:latest
        ports:
          - containerPort: 9080
        imagePullPolicy: IfNotPresent
---
#Deploy the service
apiVersion: v1
kind: Service
metadata:
  name: trader-service
  labels:
    app: trader
spec:
  type: NodePort
  ports:
    - port: 9080
  selector:
    app: trader
---
#Configure the ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
# annotations:
#   ingress.kubernetes.io/rewrite-target: /trader
  name: trader-ingress
spec:
  rules:
  - http:
      paths:
      - path: /trader
        backend:
          serviceName: trader-service
          servicePort: 9080
